Issue #17276: Add CSS rules to enable wrapping for table cells in Properties section

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -401,3 +401,11 @@ span.wrapper.inline {
     font-style: italic;
   }
 }
+
+section[id="Properties"] .wrapper table tr td:nth-child(4),
+section[id="Properties"] .wrapper table tr td:nth-child(4) pre,
+section[id="Properties"] .wrapper table tr td:nth-child(4) code {
+  white-space: pre-wrap !important;
+  word-break: break-word !important;
+  overflow-wrap: break-word;
+}
